--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 	http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          id="WebApp_ID" version="2.5" metadata-complete="true">
-    <display-name>Guest Book</display-name>
+    <display-name>SvgBoard</display-name>
     <servlet>
         <servlet-name>all</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
